--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     target="_blank"
     class="whatsapp-icon"
   >
-    <img src="Fotky/whatsapp-icon.png" alt="WhatsApp">
+    <img src="Fotky/whatsapp.png" alt="WhatsApp">
   </a>
 </div>
 
@@ -199,6 +199,7 @@
 
 </body>
 </html>
+
 
 
 
