--- a/index.html
+++ b/index.html
@@ -32,20 +32,21 @@
       </div>
       
       <!-- Kontakty a Instagram vpravo -->
-      <div class="contact">
-        <a href="mailto:trofejeodkaci@seznam.cz">trofejeodkaci@seznam.cz</a>
-        <span>|</span>
-        <span>+420 720 208 418</span>
-        
+<div class="contact">
+  <a href="mailto:trofejeodkaci@seznam.cz">trofejeodkaci@seznam.cz</a>
+  <span>|</span>
+  <span>+420 720 208 418</span>
 
-  <a
-    href="https://wa.me/420720208418?text=Zdrav%C3%ADm%2C%20m%C3%A1m%20z%C3%A1jem%20o%20trofej%20z%20m%C3%A9ho%20%C3%BAlovku."
-    target="_blank"
-    class="whatsapp-icon"
-  >
+  <!-- malé WA a IG tlačítko -->
+  <a href="https://wa.me/420720208418" target="_blank" class="social-pill">
     <img src="Fotky/whatsapp.png" alt="WhatsApp">
   </a>
+
+  <a href="https://www.instagram.com/trofejeodkaci/" target="_blank" class="social-pill">
+    <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
+  </a>
 </div>
+
 
     </div>
   </div>
@@ -199,6 +200,7 @@
 
 </body>
 </html>
+
 
 
 
