--- a/index.html
+++ b/index.html
@@ -20,36 +20,40 @@
 <body>
 
   <!-- NOVÁ BÍLÁ LIŠTA NAHOŘE -->
-  <div class="top-bar">
-    <div class="top-bar-container">
-      <!-- Logo vlevo -->
-      <div class="logo">
-        <div class="logo-container">
-          <a href="index.html">
-            <img src="Fotky/logo (2).png" alt="Logo" class="logo">
-          </a>
-        </div>
-      </div>
-      
-      <!-- Kontakty a Instagram vpravo -->
-<div class="contact">
-  <a href="mailto:trofejeodkaci@seznam.cz">trofejeodkaci@seznam.cz</a>
-  <span>|</span>
-  <span>+420 720 208 418</span>
+ <div class="top-bar">
+  <div class="top-bar-container">
 
-  <!-- malé WA a IG tlačítko -->
-  <a href="https://wa.me/420720208418" target="_blank" class="social-pill">
-    <img src="Fotky/whatsapp.png" alt="WhatsApp">
-  </a>
+    <!-- logo vlevo -->
+    <div class="logo-container">
+      <a href="index.html">
+        <img src="Fotky/logo (2).png" alt="Logo">
+      </a>
+    </div>
 
-  <a href="https://www.instagram.com/trofejeodkaci/" target="_blank" class="social-pill">
-    <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
-  </a>
+    <!-- kontakt + malé WA/IG vpravo -->
+    <div class="contact">
+      <a href="mailto:trofejeodkaci@seznam.cz">trofejeodkaci@seznam.cz</a>
+      <span>|</span>
+      <span>+420 720 208 418</span>
+
+      <!-- WhatsApp malé tlačítko -->
+      <a href="https://wa.me/420720208418"
+         target="_blank"
+         class="social-pill social-pill-wa">
+        <img src="Fotky/whatsapp.png" alt="WhatsApp">
+      </a>
+
+      <!-- Instagram malé tlačítko -->
+      <a href="https://www.instagram.com/trofejeodkaci/"
+         target="_blank"
+         class="social-pill social-pill-ig">
+        <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
+      </a>
+    </div>
+
+  </div>
 </div>
 
-
-    </div>
-  </div>
   
 
   <header>
@@ -200,6 +204,7 @@
 
 </body>
 </html>
+
 
 
 
