--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- TITULEK PRO VYHLEDÁVAČE / ZÁLOŽKU -->
+  <!-- TITULEK + POPISEK -->
   <title>Trofej z Tvého úlovku</title>
-
-  <!-- POPISEK PRO GOOGLE -->
-  <meta name="description" content="Zakázková výroba loveckých trofejí – bělení lebek a profesionální úprava paroží. Šetrné zpracování, individuální přístup, možnost renovace starých trofejí. Přeměníme váš úlovek v reprezentativní trofej.!">
+  <meta name="description" content="Pečlivě tvoříme trofeje z Tvých úlovků. Mrkni na naše hotové trofeje zvěře pro doživotní zážitek!">
 
   <!-- IKONA WEBU -->
   <link rel="icon" type="image/png" href="Fotky/logo (2).png">
@@ -16,97 +14,91 @@
   <link rel="stylesheet" href="styles.css">
   <script defer src="script.js"></script>
 </head>
-
 <body>
 
-  <!-- NOVÁ BÍLÁ LIŠTA NAHOŘE -->
- <div class="top-bar">
-  <div class="top-bar-container">
+  <!-- HORNÍ BÍLÁ LIŠTA -->
+  <div class="top-bar">
+    <div class="top-bar-container">
 
-    <!-- logo vlevo -->
-    <div class="logo-container">
-      <a href="index.html">
-        <img src="Fotky/logo (2).png" alt="Logo">
-      </a>
-    </div>
-
-    <!-- kontakt + malé WA/IG vpravo -->
-    <div class="contact">
-      <a href="mailto:trofejeodkaci@seznam.cz">trofejeodkaci@seznam.cz</a>
-      <span>|</span>
-      <span>+420 720 208 418</span>
-
-      <!-- WhatsApp malé tlačítko -->
-      <a href="https://wa.me/420720208418"
-         target="_blank"
-         class="social-pill social-pill-wa">
-        <img src="Fotky/whatsapp.png" alt="WhatsApp">
-      </a>
-
-      <!-- Instagram malé tlačítko -->
-      <a href="https://www.instagram.com/trofejeodkaci/"
-         target="_blank"
-         class="social-pill social-pill-ig">
-        <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
-      </a>
-    </div>
-
-  </div>
-</div>
-
-  
-
-  <header>
-  <nav>
-    <ul>
-      <!-- ORANŽOVÉ TLAČÍTKO V MENU: VYTVOŘIT TROFEJ -->
-      <li class="create-trofej-nav">
-        <a href="kontakt.html" class="create-trofej-btn-nav">
-          Chci vytvořit svou trofej
+      <!-- logo vlevo -->
+      <div class="logo">
+        <a href="index.html">
+          <img src="Fotky/logo (2).png" alt="Trofeje od Káči">
         </a>
-      </li>
-      <li><a href="index.html">Domů</a></li>
-      <li class="dropdown">
-        <a href="trofeje.html">Trofeje</a>
-        <ul class="dropdown-menu">
-          <li><a href="jeleni.html">Jelení trofeje</a></li>
-          <li><a href="danci.html">Dančí trofeje</a></li>
-          <li><a href="srnci.html">Srnčí trofeje</a></li>
-        </ul>
-      </li>
-      <li class="dropdown">
-        <a href="lovecke-doplnky.html">Lovecké doplňky</a>
-        <ul class="dropdown-menu">
-          <li><a href="noze.html">Nože</a></li>
-          <li><a href="opasky.html">Opasky</a></li>
-          <li><a href="doplnky-parozi.html">Doplňky z paroží</a></li>
-        </ul>
-      </li>
-      <li><a href="pred-po.html">Před a Po</a></li>
-      <li><a href="jak-to-probiha.html">Jak to probíhá</a></li>
-      <li><a href="kontakt.html">Kontakt</a></li>
-    </ul>
-  </nav>
-</header>
+      </div>
 
+      <!-- kontakt + malé WA/IG vpravo -->
+      <div class="contact">
+        <a href="mailto:trofejeodkaci@seznam.cz">trofejeodkaci@seznam.cz</a>
+        <span>|</span>
+        <span>+420 720 208 418</span>
+
+        <!-- WhatsApp malé tlačítko -->
+        <a href="https://wa.me/420720208418"
+           target="_blank"
+           class="social-pill">
+          <img src="Fotky/whatsapp.png" alt="WhatsApp">
+        </a>
+
+        <!-- Instagram malé tlačítko -->
+        <a href="https://www.instagram.com/trofejeodkaci/"
+           target="_blank"
+           class="social-pill">
+          <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
+        </a>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- NAVIGACE -->
+  <header>
+    <nav>
+      <ul>
+        <li class="create-trofej-nav">
+          <a href="kontakt.html" class="create-trofej-btn-nav">Chci vytvořit svou trofej</a>
+        </li>
+        <li><a href="index.html">Domů</a></li>
+        <li class="dropdown">
+          <a href="trofeje.html">Trofeje</a>
+          <ul class="dropdown-menu">
+            <li><a href="jeleni.html">Jelení trofeje</a></li>
+            <li><a href="danci.html">Dančí trofeje</a></li>
+            <li><a href="srnci.html">Srnčí trofeje</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="lovecke-doplnky.html">Lovecké doplňky</a>
+          <ul class="dropdown-menu">
+            <li><a href="noze.html">Nože</a></li>
+            <li><a href="opasky.html">Opasky</a></li>
+            <li><a href="doplnky-parozi.html">Doplňky z paroží</a></li>
+          </ul>
+        </li>
+        <li><a href="pred-po.html">Před a Po</a></li>
+        <li><a href="jak-to-probiha.html">Jak to probíhá</a></li>
+        <li><a href="kontakt.html">Kontakt</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <!-- Hlavní karusel s velkými fotkami -->
+  <!-- HLAVNÍ CAROUSEL -->
   <section class="carousel">
     <div class="carousel-container">
       <img src="Fotky/karusel_1.jpg" alt="Výrobek 1">
       <img src="Fotky/karusel_2.jpg" alt="Výrobek 2">
       <img src="Fotky/karusel_3.jpg" alt="Výrobek 3">
     </div>
+
     <div class="carousel-controls">
       <button id="prev">&#10094;</button>
       <button id="next">&#10095;</button>
     </div>
 
-    <!-- Overlay text (hero text) – posunutý výš -->
-    <div class="hero-text" style="top: 25%;">
+    <!-- Hero text -->
+    <div class="hero-text">
       <h1>Zakázková výroba trofejí</h1>
-      <p>Pečlivé bělění lebek a úprava paroží</p>
+      <p>Pečlivé bělení lebek a úprava paroží</p>
 
       <div>
         <a href="trofeje.html" class="btn-cta">Podívat se na trofeje</a>
@@ -117,102 +109,47 @@
     </div>
   </section>
 
-  <!-- Carousel PŘED A PO pod hlavním karuselem -->
-  <section class="before-after-carousel" style="position: relative; max-width: 1200px; margin: 0 auto; padding: 20px 20px 40px;">
-    <h2>Před a Po</h2>
-
-    <div class="ba-slides">
-      <!-- Slide 1 -->
-      <section class="before-after">
-        <div class="img-container">
-          <img src="Fotky/před_A_po/před1.JPG" alt="Před úpravou 1">
-          <p class="caption">Před</p>
-        </div>
-        <div class="img-container">
-          <img src="Fotky/před_A_po/po1.JPG" alt="Po úpravě 1">
-          <p class="caption">Po</p>
-        </div>
-      </section>
-
-      <!-- Slide 2 -->
-      <section class="before-after">
-        <div class="img-container">
-          <img src="Fotky/před_A_po/před2.JPG" alt="Před úpravou 2">
-          <p class="caption">Před</p>
-        </div>
-        <div class="img-container">
-          <img src="Fotky/před_A_po/po2.JPG" alt="Po úpravě 2">
-          <p class="caption">Po</p>
-        </div>
-      </section>
-
-      <!-- Slide 3 -->
-      <section class="before-after">
-        <div class="img-container">
-          <img src="Fotky/před_A_po/před3.JPG" alt="Před úpravou 3">
-          <p class="caption">Před</p>
-        </div>
-        <div class="img-container">
-          <img src="Fotky/před_A_po/po3.JPG" alt="Po úpravě 3">
-          <p class="caption">Po</p>
-        </div>
-      </section>
-
-      <!-- Slide 4 -->
-      <section class="before-after">
-        <div class="img-container">
-          <img src="Fotky/před_A_po/před4.JPG" alt="Před úpravou 4">
-          <p class="caption">Před</p>
-        </div>
-        <div class="img-container">
-          <img src="Fotky/před_A_po/po4.JPG" alt="Po úpravě 4">
-          <p class="caption">Po</p>
-        </div>
-      </section>
-    </div>
-
-    <div class="carousel-controls">
-      <button id="ba-prev">&#10094;</button>
-      <button id="ba-next">&#10095;</button>
-    </div>
-  </section>
-
+  <!-- OBSAH -->
   <main>
     <section class="uvod">
-      <p> Zabýváme se zakázkovou výrobou trofejí, bělení lebek a úpravou paroží. Provádíme odborné bělení lebek trofejové zvěře (srnec, jelen, daněk, muflon, prase divoké a další). Pracujeme šetrnými postupy, aby nedošlo k poškození kosti nebo uvolnění zubů. Výsledkem je čistá, rovnoměrně vybělená lebka s přirozeným vzhledem, připravená k montáži na štítek nebo k zavěšení.  </p>
+      <p>Vítejte na našem webu s ručními výrobky z paroží! Nabízíme trofeje, nože, opasky a další doplňky.</p>
       <p>Prohlédněte si naši práci a pořiďte si vlastní kousek!</p>
+    </section>
+
+    <!-- PŘED A PO – zkrácená ukázka -->
+    <section>
+      <h2>Před a Po</h2>
+      <p style="text-align:center;">Mrkni, jak vypadá trofej před úpravou a po ní:</p>
+
+      <div class="before-after">
+        <div class="img-container">
+          <img src="Fotky/před_A_po/před1.JPG" alt="Před úpravou">
+          <p class="caption">Před</p>
+        </div>
+        <div class="img-container">
+          <img src="Fotky/před_A_po/po1.JPG" alt="Po úpravě">
+          <p class="caption">Po</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- JAK TO PROBÍHÁ – krátký přehled -->
+    <section>
+      <h2>Jak to probíhá</h2>
+      <div class="proces-kroky">
+        <ol class="proces-list">
+          <li>Napíšete nebo zavoláte a pošlete fotku trofeje.</li>
+          <li>Domluvíme možnosti úpravy a orientační cenu.</li>
+          <li>Trofej nám předáte osobně nebo pošlete pečlivě zabalenou.</li>
+          <li>Trofej zpracujeme a po dokončení ji předáme / pošleme zpět.</li>
+        </ol>
+      </div>
     </section>
   </main>
 
   <footer class="normal-footer">
     © 2025 Trofeje od Káči. Všechna práva vyhrazena.
   </footer>
-<!-- Plovoucí ikony WhatsApp + Instagram -->
-<a href="https://wa.me/420720208418" 
-   class="floating-icon floating-whatsapp" 
-   target="_blank" 
-   aria-label="Napsat na WhatsApp">
-  <img src="Fotky/whatsapp.png" alt="WhatsApp">
-</a>
-
-<a href="https://www.instagram.com/trofejeodkaci/" 
-   class="floating-icon floating-instagram" 
-   target="_blank" 
-   aria-label="Instagram Trofeje od Káči">
-  <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
-</a>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
