--- a/pred-po.html
+++ b/pred-po.html
@@ -9,29 +9,38 @@
 </head>
 <body>
 <!-- NOVÁ BÍLÁ LIŠTA NAHOŘE -->
-<div class="top-bar">
-  <div class="top-bar-container">
-    <!-- Logo vlevo -->
-    <div class="logo">
+  <div class="top-bar">
+    <div class="top-bar-container">
+
+      <!-- logo vlevo -->
       <div class="logo">
-        <div class="logo-container">
-          <a href="index.html"><img src="Fotky\logo (2).png" alt="Logo" class="logo"></a>
-        </div>
+        <a href="index.html">
+          <img src="Fotky/logo (2).png" alt="Trofeje od Káči">
+        </a>
       </div>
+
+      <!-- kontakt + malé WA/IG vpravo -->
+      <div class="contact">
+        <a href="mailto:trofejeodkaci@seznam.cz">trofejeodkaci@seznam.cz</a>
+        <span>|</span>
+        <span>+420 720 208 418</span>
+
+        <!-- WhatsApp malé tlačítko -->
+        <a href="https://wa.me/420720208418"
+           target="_blank"
+           class="social-pill">
+          <img src="Fotky/whatsapp.png" alt="WhatsApp">
+        </a>
+
+        <!-- Instagram malé tlačítko -->
+        <a href="https://www.instagram.com/trofejeodkaci/"
+           target="_blank"
+           class="social-pill">
+          <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
+        </a>
+      </div>
+
     </div>
-    
-    <!-- Kontakty a Instagram vpravo -->
-    <div class="contact">
-      <a href="trofejeodkaci@seznam.cz">trofejeodkaci@seznam.cz</a>
-      <span>|</span>
-      <span>+420 720 208 418</span>
-      
-      <!-- Instagram ikona vedle kontaktů -->
-      <a href="https://www.instagram.com/trofejeodkaci/" target="_blank" class="instagram-icon">
-        <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
-      </a>
-    </div>
-  </div>
 </div>
 <header>
   <nav>
@@ -120,6 +129,7 @@
 
 </body>
 </html>
+
 
 
 
