--- a/jak-to-probiha.html
+++ b/jak-to-probiha.html
@@ -10,25 +10,38 @@
 <body>
 
 <!-- Bílá lišta nahoře -->
-<div class="top-bar">
-  <div class="top-bar-container">
-    <div class="logo">
-      <div class="logo-container">
+  <div class="top-bar">
+    <div class="top-bar-container">
+
+      <!-- logo vlevo -->
+      <div class="logo">
         <a href="index.html">
-          <img src="Fotky/logo (2).png" alt="Logo" class="logo">
+          <img src="Fotky/logo (2).png" alt="Trofeje od Káči">
         </a>
       </div>
-    </div>
 
-    <div class="contact">
-      <a href="mailto:trofejeodkaci@seznam.cz">trofejeodkaci@seznam.cz</a>
-      <span>|</span>
-      <span>+420 720 208 418</span>
-      <a href="https://www.instagram.com/trofejeodkaci/" target="_blank" class="instagram-icon">
-        <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
-      </a>
+      <!-- kontakt + malé WA/IG vpravo -->
+      <div class="contact">
+        <a href="mailto:trofejeodkaci@seznam.cz">trofejeodkaci@seznam.cz</a>
+        <span>|</span>
+        <span>+420 720 208 418</span>
+
+        <!-- WhatsApp malé tlačítko -->
+        <a href="https://wa.me/420720208418"
+           target="_blank"
+           class="social-pill">
+          <img src="Fotky/whatsapp.png" alt="WhatsApp">
+        </a>
+
+        <!-- Instagram malé tlačítko -->
+        <a href="https://www.instagram.com/trofejeodkaci/"
+           target="_blank"
+           class="social-pill">
+          <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
+        </a>
+      </div>
+
     </div>
-  </div>
 </div>
 
 <header>
