--- a/trofeje.html
+++ b/trofeje.html
@@ -87,26 +87,24 @@
     <a href="srnci.html" class="subcat-link">Srnčí trofeje</a>
   </div>
 
-  <h2>Naše nejnovější kousky</h2>
+ <h2>Naše nejnovější kousky</h2>
 
-  <!-- Galerie obrázků (pokud chceš) -->
-  <div class="product-gallery">
-    <figure>
-      <img src="Fotky\srnec\0aaa4ed5-ead8-4d2c-9322-bab0c4324683.jpg" alt="Trofej 1">
-      <figcaption>Unikátní trofej 1</figcaption>
-    </figure>
-    <figure>
-      <img src="Fotky\srnec\ebe5825d-bd6b-45ac-8aff-8e8a881033db.jpg" alt="Trofej 2">
-      <figcaption>Dančí trofej zdobená</figcaption>
-    </figure>
-    <figure>
-      <img src="Fotky\Jelen\bc335455-251f-4735-b28e-34e94306cb64.jpg" alt="Trofej 2">
-      <figcaption>Dančí trofej zdobená</figcaption>
-    </figure>
-    <figure>
-      <img src="Fotky\srnec\69647d63-f12b-497f-9b9e-cbfc3fd4fb63.jpg" alt="Trofej 2">
-      <figcaption>Dančí trofej zdobená</figcaption>
-    </figure>
+<section class="product-gallery">
+  <figure>
+    <img src="Fotky/trofeje/nejnovejsi1.jpg" alt="Jelení trofej">
+    <figcaption>Jelení trofej – bělení lebky</figcaption>
+  </figure>
+
+  <figure>
+    <img src="Fotky/trofeje/nejnovejsi2.jpg" alt="Dančí trofej">
+    <figcaption>Dančí trofej – nový štítek</figcaption>
+  </figure>
+
+  <figure>
+    <img src="Fotky/trofeje/nejnovejsi3.jpg" alt="Srnčí trofej">
+    <figcaption>Srnčí trofej – kompletní úprava</figcaption>
+  </figure>
+</section>
     <!-- další trofeje... -->
   </div>
 
@@ -117,6 +115,7 @@
 
 </body>
 </html>
+
 
 
 
