--- a/trofeje.html
+++ b/trofeje.html
@@ -90,18 +90,18 @@
  <h2>Naše nejnovější kousky</h2>
 
 <section class="product-gallery">
-  <figure>
-    <img src="Fotky/trofeje/nejnovejsi1.jpg" alt="Jelení trofej">
+  <figure>Fotky/karusel_1.jpg
+    <img src="Fotky/Jelen/bc335455-251f-4735-b28e-34e94306cb64.jpg" alt="Jelení trofej">
     <figcaption>Jelení trofej – bělení lebky</figcaption>
   </figure>
 
   <figure>
-    <img src="Fotky/trofeje/nejnovejsi2.jpg" alt="Dančí trofej">
+    <img src="Fotky/Daněk/a8d07fcc-113b-4467-809a-9cea8cc6eef9.jpg" alt="Dančí trofej">
     <figcaption>Dančí trofej – nový štítek</figcaption>
   </figure>
 
   <figure>
-    <img src="Fotky/trofeje/nejnovejsi3.jpg" alt="Srnčí trofej">
+    <img src="Fotky/karusel_1.jpg" alt="Srnčí trofej">
     <figcaption>Srnčí trofej – kompletní úprava</figcaption>
   </figure>
 </section>
@@ -115,6 +115,7 @@
 
 </body>
 </html>
+
 
 
 
