--- a/trofeje.html
+++ b/trofeje.html
@@ -90,19 +90,21 @@
  <h2>Naše nejnovější kousky</h2>
 
 <section class="product-gallery">
-  <figure>Fotky/karusel_1.jpg
-    <img src="Fotky/Jelen/bc335455-251f-4735-b28e-34e94306cb64.jpg" alt="Jelení trofej">
+  <figure>
     <figcaption>Jelení trofej – bělení lebky</figcaption>
+    <img src="Fotky/Jelen/bc335455-251f-4735-b28e-34e94306cb64.jpg" alt="Jelení trofej">
   </figure>
 
   <figure>
+    <figcaption>Dančí trofej</figcaption>
+    
     <img src="Fotky/Daněk/a8d07fcc-113b-4467-809a-9cea8cc6eef9.jpg" alt="Dančí trofej">
-    <figcaption>Dančí trofej – nový štítek</figcaption>
   </figure>
 
   <figure>
+     <figcaption>Srnčí trofej – kompletní úprava</figcaption>
     <img src="Fotky/karusel_1.jpg" alt="Srnčí trofej">
-    <figcaption>Srnčí trofej – kompletní úprava</figcaption>
+   
   </figure>
 </section>
     <!-- další trofeje... -->
@@ -115,6 +117,7 @@
 
 </body>
 </html>
+
 
 
 
