--- a/trofeje.html
+++ b/trofeje.html
@@ -8,7 +8,8 @@
   <script defer src="script.js"></script>
 </head>
 <body>
-<!-- NOVÁ BÍLÁ LIŠTA NAHOŘE -->
+
+  <!-- NOVÁ BÍLÁ LIŠTA NAHOŘE -->
   <div class="top-bar">
     <div class="top-bar-container">
 
@@ -41,85 +42,80 @@
       </div>
 
     </div>
-</div>
-<header>
-  <nav>
-    <ul>
-      <!-- ORANŽOVÉ TLAČÍTKO V MENU: VYTVOŘIT TROFEJ -->
-      <li class="create-trofej-nav">
-        <a href="kontakt.html" class="create-trofej-btn-nav">
-          Chci vytvořit svou trofej
-        </a>
-      </li>
-      <li><a href="index.html">Domů</a></li>
-      <li class="dropdown">
-        <a href="trofeje.html">Trofeje</a>
-        <ul class="dropdown-menu">
-          <li><a href="jeleni.html">Jelení trofeje</a></li>
-          <li><a href="danci.html">Dančí trofeje</a></li>
-          <li><a href="srnci.html">Srnčí trofeje</a></li>
-        </ul>
-      </li>
-      <li class="dropdown">
-        <a href="lovecke-doplnky.html">Lovecké doplňky</a>
-        <ul class="dropdown-menu">
-          <li><a href="noze.html">Nože</a></li>
-          <li><a href="opasky.html">Opasky</a></li>
-          <li><a href="doplnky-parozi.html">Doplňky z paroží</a></li>
-        </ul>
-      </li>
-      <li><a href="pred-po.html">Před a Po</a></li>
-      <li><a href="jak-to-probiha.html">Jak to probíhá</a></li>
-      <li><a href="kontakt.html">Kontakt</a></li>
+  </div>
+
+  <header>
+    <nav>
+      <ul>
+        <!-- ORANŽOVÉ TLAČÍTKO V MENU: VYTVOŘIT TROFEJ -->
+        <li class="create-trofej-nav">
+          <a href="kontakt.html" class="create-trofej-btn-nav">
+            Chci vytvořit svou trofej
+          </a>
+        </li>
+        <li><a href="index.html">Domů</a></li>
+        <li class="dropdown">
+          <a href="trofeje.html">Trofeje</a>
+          <ul class="dropdown-menu">
+            <li><a href="jeleni.html">Jelení trofeje</a></li>
+            <li><a href="danci.html">Dančí trofeje</a></li>
+            <li><a href="srnci.html">Srnčí trofeje</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="lovecke-doplnky.html">Lovecké doplňky</a>
+          <ul class="dropdown-menu">
+            <li><a href="noze.html">Nože</a></li>
+            <li><a href="opasky.html">Opasky</a></li>
+            <li><a href="doplnky-parozi.html">Doplňky z paroží</a></li>
+          </ul>
+        </li>
+        <li><a href="pred-po.html">Před a Po</a></li>
+        <li><a href="jak-to-probiha.html">Jak to probíhá</a></li>
+        <li><a href="kontakt.html">Kontakt</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Trofeje</h1>
+    <p>
+      V této sekci najdete obecný přehled našich ručně zpracovaných trofejí z paroží.
+      Vyberte si z podkategorií nebo prohlédněte galerii!
+    </p>
+
+    <!-- MENU PODKATEGORIÍ – OBDÉLNÍKY -->
+    <ul class="subcategories">
+      <li><a href="jeleni.html" class="subcat-link">Jelení trofeje</a></li>
+      <li><a href="danci.html" class="subcat-link">Dančí trofeje</a></li>
+      <li><a href="srnci.html" class="subcat-link">Srnčí trofeje</a></li>
     </ul>
-  </nav>
-</header>
 
+    <h2>Naše nejnovější kousky</h2>
 
-<main>
-  <h1>Trofeje</h1>
-  <p>V této sekci najdete obecný přehled našich ručně zpracovaných trofejí z paroží. Vyberte si z podkategorií nebo prohlédněte galerii!</p>
+    <section class="product-gallery">
+      <figure>
+        <figcaption>Jelení trofej – bělení lebky</figcaption>
+        <img src="Fotky/Jelen/bc335455-251f-4735-b28e-34e94306cb64.jpg" alt="Jelení trofej – bělení lebky">
+      </figure>
 
-  <!-- Odkazy na podkategorie (Jelení, Dančí, Srnčí) -->
-  <div class="subcategories">
-    <a href="jeleni.html" class="subcat-link">Jelení trofeje</a>
-    <a href="danci.html" class="subcat-link">Dančí trofeje</a>
-    <a href="srnci.html" class="subcat-link">Srnčí trofeje</a>
-  </div>
+      <figure>
+        <figcaption>Dančí trofej</figcaption>
+        <img src="Fotky/Daněk/a8d07fcc-113b-4467-809a-9cea8cc6eef9.jpg" alt="Dančí trofej">
+      </figure>
 
- <h2>Naše nejnovější kousky</h2>
+      <figure>
+        <figcaption>Srnčí trofej – kompletní úprava</figcaption>
+        <img src="Fotky/karusel_1.jpg" alt="Srnčí trofej – kompletní úprava">
+      </figure>
+    </section>
+    <!-- případně další trofeje... -->
 
-<section class="product-gallery">
-  <figure>
-    <figcaption>Jelení trofej – bělení lebky</figcaption>
-    <img src="Fotky/Jelen/bc335455-251f-4735-b28e-34e94306cb64.jpg" alt="Jelení trofej">
-  </figure>
+  </main>
 
-  <figure>
-    <figcaption>Dančí trofej</figcaption>
-    
-    <img src="Fotky/Daněk/a8d07fcc-113b-4467-809a-9cea8cc6eef9.jpg" alt="Dančí trofej">
-  </figure>
-
-  <figure>
-     <figcaption>Srnčí trofej – kompletní úprava</figcaption>
-    <img src="Fotky/karusel_1.jpg" alt="Srnčí trofej">
-   
-  </figure>
-</section>
-    <!-- další trofeje... -->
-  </div>
-
-</main>
-<footer class="normal-footer">
-  © 2025 Trofeje od Káči. Všechna práva vyhrazena.
-</footer>
+  <footer class="normal-footer">
+    © 2025 Trofeje od Káči. Všechna práva vyhrazena.
+  </footer>
 
 </body>
 </html>
-
-
-
-
-
-
