--- a/danci.html
+++ b/danci.html
@@ -8,29 +8,41 @@
   <script defer src="script.js"></script>
 </head>
 <body>
-  <!-- NOVÁ BÍLÁ LIŠTA NAHOŘE -->
+   <!-- NOVÁ BÍLÁ LIŠTA NAHOŘE -->
   <div class="top-bar">
     <div class="top-bar-container">
-      <!-- Logo vlevo -->
+
+      <!-- logo vlevo -->
       <div class="logo">
-        <div class="logo-container">
-          <a href="index.html"><img src="Fotky\logo (2).png" alt="Logo" class="logo"></a>
-        </div>
+        <a href="index.html">
+          <img src="Fotky/logo (2).png" alt="Trofeje od Káči">
+        </a>
       </div>
-      
-      <!-- Kontakty a Instagram vpravo -->
+
+      <!-- kontakt + malé WA/IG vpravo -->
       <div class="contact">
         <a href="mailto:trofejeodkaci@seznam.cz">trofejeodkaci@seznam.cz</a>
         <span>|</span>
         <span>+420 720 208 418</span>
-        
-        <!-- Instagram ikona vedle kontaktů -->
-        <a href="https://www.instagram.com/trofejeodkaci/" target="_blank" class="instagram-icon">
+
+        <!-- WhatsApp malé tlačítko -->
+        <a href="https://wa.me/420720208418"
+           target="_blank"
+           class="social-pill">
+          <img src="Fotky/whatsapp.png" alt="WhatsApp">
+        </a>
+
+        <!-- Instagram malé tlačítko -->
+        <a href="https://www.instagram.com/trofejeodkaci/"
+           target="_blank"
+           class="social-pill">
           <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
         </a>
       </div>
+
     </div>
   </div>
+
 
  <header>
   <nav>
@@ -95,4 +107,5 @@
 
 </body>
 </html>
+
 
