--- a/trofeje.html
+++ b/trofeje.html
@@ -56,11 +56,12 @@
         <li><a href="index.html">Domů</a></li>
         <li class="dropdown">
           <a href="trofeje.html">Trofeje</a>
-          <ul class="dropdown-menu">
-            <li><a href="jeleni.html">Jelení trofeje</a></li>
-            <li><a href="danci.html">Dančí trofeje</a></li>
-            <li><a href="srnci.html">Srnčí trofeje</a></li>
-          </ul>
+         <ul class="subcategories">
+  <li><a href="jeleni.html" class="subcat-link">Jelení trofeje</a></li>
+  <li><a href="danci.html"  class="subcat-link">Dančí trofeje</a></li>
+  <li><a href="srnci.html"  class="subcat-link">Srnčí trofeje</a></li>
+</ul>
+
         </li>
         <li class="dropdown">
           <a href="lovecke-doplnky.html">Lovecké doplňky</a>
@@ -119,3 +120,4 @@
 
 </body>
 </html>
+
