--- a/kontakt.html
+++ b/kontakt.html
@@ -86,33 +86,29 @@
   <!-- FORMULÁŘ PRO POPTÁVKU -->
   <!-- FORMULÁŘ PRO POPTÁVKU -->
 <form 
-    id="contact-form"  
-    method="POST"
-    enctype="multipart/form-data" 
-    class="contact-form">
+  id="contact-form"
+  method="POST"
+  class="contact-form">
 
-    <label for="name">Jméno:</label>
-    <input type="text" id="name" name="from_name" placeholder="Vaše jméno" required />
+  <label for="name">Jméno:</label>
+  <input type="text" id="name" name="from_name" placeholder="Vaše jméno" required>
 
-    <label for="email">E-mail:</label>
-    <input type="email" id="email" name="reply_to" placeholder="vas@email.cz" required />
+  <label for="email">E-mail:</label>
+  <input type="email" id="email" name="reply_to" placeholder="vas@email.cz" required>
 
-    <label for="phone">Telefon (povinné):</label>
-    <input type="text" id="phone" name="phone" placeholder="+420 123 456 789" required />
+  <label for="phone">Telefon (povinné):</label>
+  <input type="text" id="phone" name="phone" placeholder="+420 123 456 789" required>
 
-        <label for="photo_url">Odkaz na fotku úlovku <em>(nepovinné)</em>:</label>
-    <input
-      type="url"
-      id="photo_url"
-      name="photo_url"
-      placeholder="https://... (např. odkaz z Google Fotek, úschovny nebo pošli na WhatsApp)"
-    />
+  <label for="photo_url">Odkaz na fotku úlovku <em>(nepovinné)</em>:</label>
+  <input type="url" id="photo_url" name="photo_url" placeholder="https://...">
 
-    <label for="message">Vaše poptávka / dotaz:</label>
-    <textarea id="message" name="message" rows="5" placeholder="Popište nám, co si přejete vyrobit..." required></textarea>
+  <label for="message">Vaše poptávka / dotaz:</label>
+  <textarea id="message" name="message" rows="5"
+    placeholder="Popište nám, co si přejete vyrobit..." required></textarea>
 
-    <button type="submit">Odeslat poptávku</button>
+  <button type="submit">Odeslat poptávku</button>
 </form>
+
 
 <!-- EmailJS knihovna -->
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -159,6 +155,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
