--- a/pred-po.html
+++ b/pred-po.html
@@ -126,9 +126,23 @@
 <footer class="normal-footer">
   © 2025 Trofeje od Káči. Všechna práva vyhrazena.
 </footer>
+  <!-- Plovoucí ikony WhatsApp + Instagram -->
+  <div class="floating-social">
+    <a href="https://wa.me/420720208418"
+       target="_blank"
+       class="floating-btn">
+      <img src="Fotky/whatsapp.png" alt="WhatsApp">
+    </a>
 
+    <a href="https://www.instagram.com/trofejeodkaci/"
+       target="_blank"
+       class="floating-btn">
+      <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
+    </a>
+  </div>
 </body>
 </html>
+
 
 
 
